* Change Github_core.Make to accept an Env module making the library
  Mirage compatible by moving a Unix.getenv invocation into a parameter (#93)
* Add contributor and contributors types (#112)
* Add Repo.contributors to list contributors to a repository (#112)
* Register automatically a Message exception printer (#116)
* Fix `git jar` help strings to match the command reality.

1.0.0 (2015-06-01):
* Changes marked with ! are type changes (not including field additions)
* ! Monad.bind now accepts a function first and then a Monad.t
* ! API.{get,post,delete,patch,put} now take optional fail_handlers
* ! API.{get,post,delete,patch,put} now take optional rate classification
* ! API.{get,post,delete,patch,put} now return 'a Response.t Monad.t
* ! URI.authorize now requires ~state argument to protect against CSRF.
* ! URI.repo_issue ~issue_number argument was renamed to ~num
* ! URI.issue_comments ~issue_number argument was renamed to ~num
* ! URI.issue_comment ~commit_id argument was renamed to ~num
* ! Scope.scope_of_string was renamed Scope.of_string
* ! Scope.string_of_scope was renamed Scope.to_string
* ! Scope.scopes_of_string was renamed Scope.list_of_string
* ! Scope.list_of_string returns a scope list option for unparseable scopes
* ! Scope.string_of_scopes was renamed Scope.list_to_string
* ! Token.{create,get_all,get,delete} return _ authorization Response.t Monad.t
* ! Token.{create,get_all,get,delete} now have additional ?otp:string argument
* ! Token.create now has additional ?fingerprint:string argument
* ! Token.get now returns auth option authorization Response.t Monad.t
* ! Token.{get,delete} ~num argument was renamed to ~id and changed to int64
* ! User.current_info ~token argument was made optional ?token
* ! User.current_info now returns user_info Response.t Monad.t
* ! User.info ~login argument was renamed to ~user
* ! User.info now returns user_info Response.t Monad.t
* ! User.repos is now User.repositories