@@ -15,6 +15,9 @@
 * Add Repo.contributors to list contributors to a repository (#112)
 * Register automatically a Message exception printer (#116)
 * Fix `git jar` help strings to match the command reality.
+* Improve `git jar create --help` manual page.
+* Add `git-gist create [--public] --descr <descr> <file1> <fileN>` to
+  upload new gists.
 
 1.0.0 (2015-06-01):
 * Changes marked with ! are type changes (not including field additions)
